--- a/backend/flask/fire.ipynb
+++ b/backend/flask/fire.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<firebase_admin.App at 0x1c9156b0430>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import firebase_admin\n",
     "from firebase_admin import credentials\n",
@@ -365,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4rc1"
+   "version": "3.8.4"
   },
   "orig_nbformat": 4,
   "vscode": {
